Modified Reindeer black styles to be a bit more lighter, easier to see textfields and comboboxes on low contrast displays.
Fixes blue and black layout styles for IE6 (previously had a child selector in layouts.css which caused IE6 fail the whole selector).

svn changeset:8336 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/layouts/layouts.css
+++ b/WebContent/VAADIN/themes/reindeer/layouts/layouts.css
@@ -27,14 +27,18 @@
 /* Blue background */
 .v-verticallayout-blue,
 .v-horizontallayout-blue,
-.v-orderedlayout-blue,
+.v-orderedlayout-blue {
+	background-color: #bcd3de;
+}
 .v-panel-content > div.blue {
 	background-color: #bcd3de;
 }
 /* Black background */
 .v-verticallayout-black,
 .v-horizontallayout-black,
-.v-orderedlayout-black,
+.v-orderedlayout-black {
+	background-color: #1e2022;
+}
 .v-panel-content > div.black {
-	background: #16181a url(img/black-bg.png) repeat-x;
+	background-color: #1e2022;
 }
