--- a/WebContent/VAADIN/themes/reindeer/select/select.css
+++ b/WebContent/VAADIN/themes/reindeer/select/select.css
@@ -207,48 +207,48 @@
 
 /* Combobox on black background */
 .black .v-filterselect {
-	background-image: url(img/left-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/left-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .v-ie6 .black .v-filterselect {
-	background-image: url(img/left-black-ie6.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/left-black-ie6.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .v-app .black .v-filterselect-input,
 .v-window .black .v-filterselect-input,
 .v-window-black .v-filterselect-input,
 .v-popupview-popup .black .v-filterselect-input {
 	color: #c9ccce;
-	background-image: url(img/center-black.png); /** sprite-ref: black-verticals; sprite-alignment: repeat; sprite-margin-bottom: 1px */
+	background-image: url(img/black/center-black.png); /** sprite-ref: black-verticals; sprite-alignment: repeat; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-focus {
-	background-image: url(img/left-black-focus.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/left-black-focus.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .v-ie6 .black .v-filterselect-focus {
-	background-image: url(img/left-black-focus-ie6.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/left-black-focus-ie6.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-focus .v-filterselect-input {
-	background-image: url(img/center-black-focus.png); /** sprite-ref: black-verticals; sprite-alignment: repeat; sprite-margin-bottom: 1px */
+	background-image: url(img/black/center-black-focus.png); /** sprite-ref: black-verticals; sprite-alignment: repeat; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-button {
-	background-image: url(img/right-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-button:hover {
-	background-image: url(img/right-black-hover.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black-hover.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-button:active {
-	background-image: url(img/right-black-pressed.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black-pressed.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-focus .v-filterselect-button {
-	background-image: url(img/right-black-focus.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black-focus.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-focus .v-filterselect-button:hover {
-	background-image: url(img/right-black-focus-hover.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black-focus-hover.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-focus .v-filterselect-button:active {
-	background-image: url(img/right-black-focus-pressed.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black-focus-pressed.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-disabled .v-filterselect-button:hover,
 .black .v-readonly .v-filterselect-button:hover {
-	background-image: url(img/right-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
+	background-image: url(img/black/right-black.png); /** sprite-ref: black-verticals; sprite-margin-bottom: 1px */
 }
 .black .v-filterselect-prompt .v-filterselect-input {
 	color: #5f6366;
@@ -259,10 +259,10 @@
 /* Native selects on black background */
 .black .v-select select,
 .black .v-select-twincol select {
-	border: 1px solid #343536;
-	border-top-color: #2a2a2b;
-	border-bottom-color: #3a3b3c;
-	background: #1b1d1e;
+	border-color: #38393a;
+	border-top-color: #2c2d2e;
+	border-bottom-color: #3e3f3f;
+	background: #151717;
 	color: #c9ccce;
 }
 
