--- a/WebContent/VAADIN/themes/reindeer/notification/notification.css
+++ b/WebContent/VAADIN/themes/reindeer/notification/notification.css
@@ -1,6 +1,6 @@
 .v-Notification {
 	color: #fff;
-	border-radius: 4px
+	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	font-size: 100%;
