Minor fixes to Reindeer theme. * HR's now look pretty in all browsers, not just Safari. HR's are used in Reindeer styles example. * Fixed regression for textfield height in Safari.
svn changeset:8341 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/label/label.css
+++ b/WebContent/VAADIN/themes/reindeer/label/label.css
@@ -46,18 +46,24 @@
 }
 
 .v-label hr {
-	height: 1px;
+	height: 2px;
 	overflow: hidden;
 	background: #dcdcdc;
+	color: #dcdcdc; /* For IE */
 	border: none;
 	border-bottom: 1px solid #fff;
 }
+.v-sa .v-label hr {
+	height: 1px;
+}
 .blue .v-label hr {
 	background: #a3bcc9;
+	color: #a3bcc9;
 	border-bottom-color: #cfe2eb;
 }
 .black .v-label hr {
 	background: #0c0d0e;
+	color: #0c0d0e;
 	border-bottom-color: #292b2e;
 }
 
