--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -2827,18 +2827,24 @@ td.v-datefield-calendarpanel-nextyear {
 }
 
 .v-label hr {
-	height: 1px;
+	height: 2px;
 	overflow: hidden;
 	background: #dcdcdc;
+	color: #dcdcdc; /* For IE */
 	border: none;
 	border-bottom: 1px solid #fff;
 }
+.v-sa .v-label hr {
+	height: 1px;
+}
 .blue .v-label hr {
 	background: #a3bcc9;
+	color: #a3bcc9;
 	border-bottom-color: #cfe2eb;
 }
 .black .v-label hr {
 	background: #0c0d0e;
+	color: #0c0d0e;
 	border-bottom-color: #292b2e;
 }
 
@@ -4255,7 +4261,7 @@ textarea.v-textarea-prompt {
 	background: transparent;
 	border-width: 0 3px 0 3px;
 	padding: 4px 0 0 0;
-	height: 21px;
+	height: 20px;
 	-webkit-border-image: url(textfield/img/bg-border-image.png) 0 3 0 3 stretch stretch;
 	-moz-border-image: url(textfield/img/bg-border-image.png) 0 3 0 3 stretch stretch;
 }
