Fixes small textfield style problem in Liferay portlets.
svn changeset:8351 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/textfield/textfield.css
+++ b/WebContent/VAADIN/themes/reindeer/textfield/textfield.css
@@ -18,7 +18,9 @@
 }
 /* Need more specific selector because of #2384 fixes in base/common/common.css */
 .v-app input.v-textfield,
-.v-app .v-textarea {
+.v-app .v-textarea,
+.v-window input.v-textfield,
+.v-window .v-textarea  {
 	padding: 3px 3px 0 3px;
 }
 /* Textfield on blue background */
