Fixes small textfield style problem in Liferay portlets (now in base and Runo theme as well).
svn changeset:8352 branch:6.0

--- a/WebContent/VAADIN/themes/base/common/common.css
+++ b/WebContent/VAADIN/themes/base/common/common.css
@@ -194,6 +194,11 @@ div.v-app-loading {
 .v-app input[type="password"],
 .v-app input[type="reset"],
 .v-app select,
-.v-app textarea {
+.v-app textarea ,
+.v-window input[type="text"],
+.v-window input[type="password"],
+.v-window input[type="reset"],
+.v-window select,
+.v-window textarea {
 	padding: 2px;
 }
