A very minor fix for Reindeer/IE8.
svn changeset:8371 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/label/label.css
+++ b/WebContent/VAADIN/themes/reindeer/label/label.css
@@ -53,7 +53,8 @@
 	border: none;
 	border-bottom: 1px solid #fff;
 }
-.v-sa .v-label hr {
+.v-sa .v-label hr,
+.v-ie8 .v-label hr {
 	height: 1px;
 }
 .blue .v-label hr {
