A very minor fix for Reindeer/IE8.
svn changeset:8372 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -2839,7 +2839,8 @@ td.v-datefield-calendarpanel-nextyear {
 	border: none;
 	border-bottom: 1px solid #fff;
 }
-.v-sa .v-label hr {
+.v-sa .v-label hr,
+.v-ie8 .v-label hr {
 	height: 1px;
 }
 .blue .v-label hr {
