--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -1441,6 +1441,7 @@ div.v-tree-node-leaf {
 	position: relative;
 	width: 10em;
 	margin:0;
+	overflow:hidden;
 }
 
 .v-upload-immediate input {
@@ -1457,6 +1458,7 @@ div.v-tree-node-leaf {
 	left:0;
 	top:0;
 	width:100%;
+	text-align:left;
 }
   
 
